--- a/Digital Piano/MainWindow.xaml
+++ b/Digital Piano/MainWindow.xaml
@@ -15,7 +15,7 @@
                              From="-400" To="0"
                              Duration="0:0:0.3"
                              DecelerationRatio="0.9" />
-            <DoubleAnimation Storyboard.TargetName="OverlayMenu"
+            <DoubleAnimation Storyboard.TargetName="Overlay"
                              Storyboard.TargetProperty="Opacity"
                              From="0" To="0.5"
                              Duration="0:0:0.3" />
@@ -27,7 +27,7 @@
                              From="0" To="-400"
                              Duration="0:0:0.3"
                              AccelerationRatio="0.9" />
-            <DoubleAnimation Storyboard.TargetName="OverlayMenu"
+            <DoubleAnimation Storyboard.TargetName="Overlay"
                              Storyboard.TargetProperty="Opacity"
                              From="0.5" To="0"
                              Duration="0:0:0.3" />
@@ -39,7 +39,7 @@
                              From="-300" To="0"
                              Duration="0:0:0.3"
                              DecelerationRatio="0.9" />
-            <DoubleAnimation Storyboard.TargetName="OverlayExit"
+            <DoubleAnimation Storyboard.TargetName="Overlay"
                              Storyboard.TargetProperty="Opacity"
                              From="0" To="0.5"
                              Duration="0:0:0.3" />
@@ -51,9 +51,31 @@
                              From="0" To="-300"
                              Duration="0:0:0.3"
                              AccelerationRatio="0.9" />
-            <DoubleAnimation Storyboard.TargetName="OverlayExit"
+            <DoubleAnimation Storyboard.TargetName="Overlay"
                              Storyboard.TargetProperty="Opacity"
                              From="0.5" To="0"
+                             Duration="0:0:0.3" />
+        </Storyboard>
+
+        <Storyboard x:Key="ShowInstructionsAnimation">
+            <DoubleAnimation Storyboard.TargetName="InstructionsPanel"
+                             Storyboard.TargetProperty="Opacity"
+                             From="0" To="1"
+                             Duration="0:0:0.3" />
+            <DoubleAnimation Storyboard.TargetName="InstructionsPanel"
+                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
+                             From="20" To="0"
+                             Duration="0:0:0.3" />
+        </Storyboard>
+
+        <Storyboard x:Key="HideInstructionsAnimation">
+            <DoubleAnimation Storyboard.TargetName="InstructionsPanel"
+                             Storyboard.TargetProperty="Opacity"
+                             From="1" To="0"
+                             Duration="0:0:0.3" />
+            <DoubleAnimation Storyboard.TargetName="InstructionsPanel"
+                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
+                             From="0" To="20"
                              Duration="0:0:0.3" />
         </Storyboard>
 
@@ -145,6 +167,26 @@
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
 
+        <Style x:Key="HelpText" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="#162812" />
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="TextWrapping" Value="Wrap" />
+            <Setter Property="Margin" Value="60,0,0,0" />
+        </Style>
+
+        <Style x:Key="SpecialHelpText" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="#162812" />
+            <Setter Property="FontSize" Value="22" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="FontStyle" Value="Italic" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Margin" Value="30,30,0,0" />
+        </Style>
+
         <Style x:Key="LabelText" TargetType="TextBlock">
             <Setter Property="Foreground" Value="#eae1d2" />
             <Setter Property="FontSize" Value="16" />
@@ -158,22 +200,21 @@
             <Setter Property="Foreground" Value="#eae1d2" />
             <Setter Property="FontWeight" Value="Bold" />
             <Setter Property="BorderBrush" Value="#162812" />
-            <Setter Property="BorderThickness" Value="0,3,3,3" />
+            <Setter Property="BorderThickness" Value="0,4,4,4" />
             <Setter Property="HorizontalContentAlignment" Value="Center" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
             <Setter Property="Padding" Value="10,5" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Grid>
+                        <Grid x:Name="buttonGrid">
                             <Border x:Name="border"
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                CornerRadius="0,10,10,0"
+                                CornerRadius="0,15,15,0"
                                 SnapsToDevicePixels="True">
-                                <ContentPresenter HorizontalAlignment="Center"
-                                                  VerticalAlignment="Center" />
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                             </Border>
                         </Grid>
                         <ControlTemplate.Triggers>
@@ -181,16 +222,12 @@
                                 <Trigger.EnterActions>
                                     <BeginStoryboard>
                                         <Storyboard>
-                                            <DoubleAnimation Storyboard.TargetName="border"
-                                                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
-                                                             To="10"
-                                                             Duration="0:0:0.2"
-                                                             AutoReverse="True" />
-                                            <DoubleAnimation Storyboard.TargetName="border"
-                                                             Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
-                                                             To="2"
-                                                             Duration="0:0:0.2"
-                                                             AutoReverse="True" />
+                                            <DoubleAnimation
+                                                Storyboard.TargetName="buttonGrid"
+                                                Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleX)"
+                                                To="1.2"
+                                                Duration="0:0:0.3"
+                                                AutoReverse="True" />
                                         </Storyboard>
                                     </BeginStoryboard>
                                 </Trigger.EnterActions>
@@ -201,15 +238,10 @@
             </Setter>
             <Setter Property="RenderTransform">
                 <Setter.Value>
-                    <TransformGroup>
-                        <TranslateTransform X="0" Y="0" />
-                        <RotateTransform Angle="0" />
-                    </TransformGroup>
+                    <ScaleTransform ScaleX="1" ScaleY="1" />
                 </Setter.Value>
             </Setter>
         </Style>
-
-        <!--Сделать анимацию для кнопки при наведении-->
 
         <Style x:Key="ContainerStyle" TargetType="Border">
             <Setter Property="BorderBrush" Value="#162812"/>
@@ -309,6 +341,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        
     </Window.Resources>
 
 
@@ -323,8 +356,7 @@
         VerticalAlignment="Top"
         Margin="0,10"
         Style="{StaticResource RibbonButtonStyle}"
-        Click="ToggleMenuButton_Click"
-        Panel.ZIndex="4" />
+        Click="ToggleMenuButton_Click"/>
 
         <Grid x:Name="MainContent">
 
@@ -549,8 +581,7 @@
 
         </Grid>
 
-        <Grid x:Name="OverlayMenu" Background="Black" Opacity="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Visibility="Collapsed"/>
-        <Grid x:Name="OverlayExit" Background="Black" Opacity="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Visibility="Collapsed"/>
+        <Grid x:Name="Overlay" Background="Black" Opacity="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Visibility="Collapsed"/>
 
         <Grid x:Name="ExitMenuPanel" Background="Transparent" Width="300" Height="150" VerticalAlignment="Top" HorizontalAlignment="Center">
             <Grid.RenderTransform>
@@ -718,11 +749,72 @@
                             <!--Сделать кнопку "Помощь"-->
 
                         </Grid>
-                        
+
+                        <Button x:Name="HelpButton"
+                            Content="ПОМОЩЬ"
+                            Width="150"
+                            Height="50"
+                            Style="{StaticResource SideBarMenuButtonStyle}"
+                            VerticalAlignment="Bottom"
+                            Click="HelpButton_Click">   
+                            <Button.Template>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Background="{TemplateBinding Background}"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        CornerRadius="15">  
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+
                     </StackPanel>
                 </Border>
             </StackPanel>
         </Grid>
+
+        <StackPanel x:Name="InstructionsPanel"
+                    Background="#eae1d2"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Margin="30"
+                    Visibility="Collapsed"
+                    Orientation="Vertical"
+                    Panel.ZIndex="3">
+            <TextBlock Style="{StaticResource SpecialHelpText}"
+                       Text="ИНСТРУКЦИЯ К ПРИЛОЖЕНИЮ DIGITAL PIANO" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Приложение симулирует пианино, клавитура которого располагается в главном меню где помимо клавиш так же есть: Громкость, Сустейн, Надписи и Метроном" />
+            <TextBlock Style="{StaticResource SpecialHelpText}"
+                       Text="Главное меню:" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Громкость: Регулирует уровень громкости пианино в процентах от 0% до 100%" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Сустейн: Регулирует уровень сустейна, Положение 0 - Выкл, Положение 1 - Малый Уровень, Положение 2 - Максимальный Уровень" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Надписи: Включает или отключает отображение названий клавиш на клавиатуре" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Метроном: Включает или отключает метроном (Настройки Метронома находятся в Расширенных настройках)" />
+            <TextBlock Style="{StaticResource SpecialHelpText}"
+                       Text="Расширенные настройки:" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Частота: Позволяет настроить частоту пианино, базовое значение 440.0 Гц" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Реверб: Позволяет настроить уровень реверберации, от 0(Выкл) до 3(Максимальный), базовое значение 0" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Хорус: Позволяет настроить уровень хоруса, от 0(Выкл) до 3(Максимальный), базовое значение 0" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Темп: Позволяет настроить скорость Метронома, от 30 до 180, базовое значение 60" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Размер: Позволяет настроить размер Метронома, от 3/4 до 7/8, базовое значение 4/4" />
+            <TextBlock Style="{StaticResource SpecialHelpText}"
+                       Text="Управление:" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Нажатие курсором на клавишу воспроизводит соответствующую ноту" />
+            <TextBlock Style="{StaticResource HelpText}"
+                       Text="Нажатие на Esc закрывает открытые вторичные окна и служит выходом из приложения" />
+        </StackPanel>
 
     </Grid>
 
